# EvenementLoto

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CPackConfig.cmake  Doxyfile  LICENSE  README.md  ci_action.py  depmanager.yml  gcovr.cfg  requirements.txt
.github/: copilot-instructions.md
ci/: DependencyCheck.py  actions.py  dockerImages.json  docker_image.py  logging_utils.py  runTests.py  run_utils.py  teamcity_utils.py
ci/actions/: build.py  clean.py  define_docker_image.py  deploy.py  test.py
ci/actions/base/: action.py
ci/utils/: docker.py  logging.py  preset.py  run.py  teamcity.py
cmake/: BaseConfig.cmake  CMakePresetsBase.json  CMakePresetsCI.json  CMakePresetsMinGW.json  CoverageConfig.cmake  Depmanager.cmake  Utilities.cmake  qt.cmake
data/: base_rules.txt  essai.lev  loto_sou.lev  loto_sou_2.lev  sanity_rules.txt  super_loto.lev  test.lev  test_sou.lev  toto fait du bateau.lev
data/slides/: Slides
data/theme/: crasy.lth  default.lth
document/: Deroulement.md  Readme.md  Utilisation.md  structure_donnee.md
include/: baseDefine.h  carton.h  random.h
include/UI/: About.h  ConfigCartons.h  ConfigurationParties.h  EvenementConfig.h  GeneralConfig.h  MainWindow.h  baseDefinitions.h
include/core/: CardPack.h  Evenement.h  Event.h  GameRound.h  GridCard.h  PaquetCartons.h  Partie.h  RandomNumberGenerator.h  Serializable.h  SubGameRound.h  carton.h  random.h  timeFunctions.h
include/gui/: About.h  BaseDialog.h  ConfigCardPack.h  ConfigEvent.h  ConfigGameRounds.h  ConfigGeneral.h  DisplayWindow.h  MainWindow.h  VisualTheme.h  WidgetNumberGrid.h  baseDefinitions.h
resources/: EvenementLoto.qrc
source/: CMakeLists.txt  baseDefine.h  main.cpp
source/core/: CardPack.cpp  CardPack.h  Event.cpp  Event.h  GameRound.cpp  GameRound.h  GridCard.cpp  Log.cpp  Log.h  Logger.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  Serializable.h  Settings.cpp  Settings.h  Statistics.cpp  Statistics.h  StringUtils.h  SubGameRound.cpp  SubGameRound.h  defines.h  timeFunctions.h  utilities.cpp  utilities.h
source/core/maths/: vectors.h
source/gui/: About.cpp  About.h  BaseDialog.cpp  BaseDialog.h  ConfigCardPack.cpp  ConfigCardPack.h  ConfigEvent.cpp  ConfigEvent.h  ConfigGameRounds.cpp  ConfigGameRounds.h  ConfigGeneral.cpp  ConfigGeneral.h  DisplayWindow.cpp  DisplayWindow.h  MainWindow.cpp  MainWindow.h  VisualTheme.cpp  VisualTheme.h  WidgetNumberGrid.cpp  WidgetNumberGrid.h  WinnerInput.cpp  WinnerInput.h  baseDefinitions.cpp  baseDefinitions.h
source/gui/ui/: About.ui  ConfigCardPack.ui  ConfigEvent.ui  ConfigGameRounds.ui  ConfigGeneral.ui  DisplayWindow.ui  MainWindow.ui  WidgetNumberGrid.ui
source/gui_imgui/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  Theme.cpp  Theme.h  Window.cpp  Window.h
source/gui_imgui/actions/: Action.cpp  Action.h  FileActions.cpp  FileActions.h  GameActions.cpp  GameActions.h  HelpActions.cpp  HelpActions.h  SettingsActions.cpp  SettingsActions.h
source/gui_imgui/event/: AppEvent.h  Event.cpp  Event.h  KeyCode.cpp  KeyCodes.h  KeyEvent.h  MouseCode.h  MouseEvent.h
source/gui_imgui/utils/: Convert.h  FileDialog.cpp  FileDialog.h  Rendering.cpp  Rendering.h
source/gui_imgui/views/: ConfigPopups.cpp  ConfigPopups.h  DisplayView.cpp  DisplayView.h  HelpPopups.cpp  HelpPopups.h  MainView.cpp  MainView.h  MenuBar.cpp  MenuBar.h  Popups.cpp  Popups.h  StatusBar.cpp  StatusBar.h  ToolBar.cpp  ToolBar.h  View.cpp  View.h
source/gui_imgui/vulkan/: TextureLibrary.cpp  TextureLibrary.h  VulkanContext.cpp  VulkanContext.h  vkData.h
source/gui_qt/: About.cpp  About.h  BaseDialog.cpp  BaseDialog.h  ConfigEvent.cpp  ConfigGameRounds.cpp  ConfigGeneral.cpp  ConfigGeneral.h  DisplayWindow.cpp  DisplayWindow.h  MainWindow.cpp  MainWindow.h  VisualTheme.cpp  VisualTheme.h  WidgetNumberGrid.cpp  WidgetNumberGrid.h  WinnerInput.cpp  WinnerInput.h  baseDefinitions.cpp  baseDefinitions.h
source/gui_qt/ui/: ConfigGameRounds.ui  MainWindow.ui  WinnerInput.ui
sources/: CMakeLists.txt  main.cpp
sources/UI/: About.cpp  About.ui  ConfigCartons.cpp  ConfigCartons.ui  ConfigurationParties.cpp  ConfigurationParties.ui  EvenementConfig.cpp  EvenementConfig.ui  GeneralConfig.cpp  GeneralConfig.ui  MainWindow.cpp  MainWindow.ui
sources/gui/: About.cpp  BaseDialog.cpp  ConfigCardPack.cpp  ConfigEvent.cpp  ConfigGameRounds.cpp  ConfigGeneral.cpp  DisplayWindow.cpp  MainWindow.cpp  VisualTheme.cpp  WidgetNumberGrid.cpp
sources/gui/ui/: About.ui  ConfigEvent.ui  ConfigGameRounds.ui  ConfigGeneral.ui  DisplayWindow.ui  MainWindow.ui
sources/internal/: CardPack.cpp  Evenement.cpp  Event.cpp  GameRound.cpp  GridCard.cpp  PaquetCartons.cpp  Partie.cpp  RandomNumberGenerator.cpp  SubGameRound.cpp  carton.cpp  random.cpp
test/: CMakeLists.txt  TestMainHelper.h
test/gui_imgui_test/: main.cpp  test_Application.cpp
test/gui_qt_test/: main.cpp  test_About.cpp  test_ConfigEvent.cpp  test_ConfigGameRounds.cpp  test_ConfigGeneral.cpp  test_DisplayWindow.cpp  test_GuiHelpers.h  test_MainWindow.cpp  test_VisualTheme.cpp  test_WidgetNumberGrid.cpp  test_WinnerInput.cpp  test_baseDefinitions.cpp
test/gui_test/: main.cpp  test_About.cpp  test_ConfigCardPack.cpp  test_ConfigEvent.cpp  test_ConfigGameRounds.cpp  test_ConfigGeneral.cpp  test_DisplayWindow.cpp  test_GuiHelpers.h  test_MainWindow.cpp  test_VisualTheme.cpp  test_WidgetNumberGrid.cpp  test_WinnerInput.cpp  test_baseDefinitions.cpp
test/lib_test/: main.cpp  test_CardPack.cpp  test_Evenement.cpp  test_Event.cpp  test_GameRound.cpp  test_GridCard.cpp  test_Log.cpp  test_PaquetCarton.cpp  test_Partie.cpp  test_RandomNumberGenerator.cpp  test_Settings.cpp  test_SubGameRound.cpp  test_carton.cpp  test_random.cpp  test_timeFunctions.cpp
